[package]
name = "leetcode"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[examples]]
name = "p241"
path = "examples/p241.rs"

[[examples]]
name = "p282"
path = "examples/p282.rs"

[[examples]]
name = "p386"
path = "examples/p386.rs"

[[examples]]
name = "p199"
path = "examples/p199.rs"

[[examples]]
name = "p958"
path = "examples/p958.rs"