[package]
name = "leetcode"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[examples]]
name = "p241"
path = "examples/p241.rs"

[[examples]]
name = "p282"
path = "examples/p282.rs"

[[examples]]
name = "p386"
path = "examples/p386.rs"

[[examples]]
name = "p199"
path = "examples/p199.rs"

[[examples]]
name = "p958"
path = "examples/p958.rs"

[[examples]]
name = "p692"
path = "examples/p692.rs"

[[examples]]
name = "p566"
path = "examples/p566.rs"

[[examples]]
name = "p835"
path = "examples/p835.rs"

[[examples]]
name = "p303"
path = "examples/p303.rs"

[[examples]]
name = "p1094"
path = "examples/p1094.rs"

[[examples]]
name = "p820"
path = "examples/p820.rs"

[[examples]]
name = "p520"
path = "examples/p520.rs"

[[examples]]
name = "p815"
path = "examples/p815.rs"

[[examples]]
name = "p530"
path = "examples/p530.rs"