[package]
name = "leetcode"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[examples]]
name = "p241"
path = "examples/p241.rs"

[[examples]]
name = "p282"
path = "examples/p282.rs"

[[examples]]
name = "p386"
path = "examples/p386.rs"

[[examples]]
name = "p199"
path = "examples/p199.rs"

[[examples]]
name = "p958"
path = "examples/p958.rs"

[[examples]]
name = "p692"
path = "examples/p692.rs"

[[examples]]
name = "p566"
path = "examples/p566.rs"

[[examples]]
name = "p835"
path = "examples/p835.rs"

[[examples]]
name = "p303"
path = "examples/p303.rs"

[[examples]]
name = "p1094"
path = "examples/p1094.rs"

[[examples]]
name = "p820"
path = "examples/p820.rs"

[[examples]]
name = "p520"
path = "examples/p520.rs"

[[examples]]
name = "p815"
path = "examples/p815.rs"

[[examples]]
name = "p530"
path = "examples/p530.rs"

[[examples]]
name = "p561"
path = "examples/p561.rs"

[[examples]]
name = "p691"
path = "examples/p691.rs"

[[examples]]
name = "p941"
path = "examples/p941.rs"

[[examples]]
name = "p849"
path = "examples/p849.rs"

[[examples]]
name = "p890"
path = "examples/p890.rs"

[[examples]]
name = "p632"
path = "examples/p632.rs"

[[examples]]
name = "p743"
path = "examples/p743.rs"

[[examples]]
name = "p826"
path = "examples/p826.rs"

[[examples]]
name = "p714"
path = "examples/p714.rs"

[[examples]]
name = "p1079"
path = "examples/p1079.rs"

[[examples]]
name = "p881"
path = "examples/p881.rs"

[[examples]]
name = "p399"
path = "examples/p399.rs"

[[examples]]
name = "p542"
path = "examples/p542.rs"

[[examples]]
name = "p354"
path = "examples/p354.rs"

[[examples]]
name = "p1028"
path = "examples/p1028.rs"

[[examples]]
name = "p315"
path = "examples/p315.rs"

[[examples]]
name = "p784"
path = "examples/p784.rs"

[[examples]]
name = "p678"
path = "examples/p678.rs"